# raspberry-pi-client

./: .cursorrules  .env.example  .gitignore  BARGE_IN_IMPLEMENTATION.md  INSTALLATION_COMPLETE.md  INSTALL_INSTRUCTIONS.md  LED_STATES_REFERENCE.md  Makefile  OLD_README.md  PYTHON_313_NOTE.md  QUICK_FIX.md  RASPBERRY_PI_RELIABILITY.md  RASPBERRY_PI_SETUP.md  README.md  SCRIBE_VERIFICATION.md  TELEMETRY_REFERENCE.md  WIFI_AP_DNSMASQ_FIX.md  WIFI_SETUP_FLOW_IMPROVEMENTS.md  WIFI_SETUP_LOGGING.md  WIFI_SETUP_TESTING.md  check_dnsmasq_binding.sh  debug_wifi_ap.sh  env.example  fix_dnsmasq_conflict.sh  gui.py  install.sh  main.py  new_main.py  pyproject.toml  requirements-lock.txt  requirements.txt  telemetry.py  test_current_hotspot.md  web.py
aec_diagnostics/: inspect_channels.py  inspect_channels_webrtc.py  test_webrtc_aec.py
config/: 99-mr60fda1.rules
docs/: AEC_TESTING_GUIDE.md  LED_STATES_REFERENCE.md  RASPBERRY_PI_SETUP.md  TELEMETRY_REFERENCE.md  WEBRTC_AEC_IMPLEMENTATION.md  architecture.mmd  audio.mmd  human_presence_detection.md  state_machine.mmd
lib/: __init__.py  auth.py  config.py  device_auth.py  presence_fusion.py  radar_sensor.py
lib/activity/: __init__.py  monitor.py
lib/agent/: __init__.py  context.py  elevenlabs.py  orchestrator.py
lib/audio/: __init__.py  device_detection.py  led_controller.py  manager.py  respeaker.py  voice_feedback.py  webrtc_aec.py
lib/detection/: __init__.py  activity.py  presence.py  standalone_pi.py  wake_word.py
lib/elevenlabs/: __init__.py  client.py
lib/engine/: __init__.py  core.py
lib/gui/: __init__.py  app.py  scalar_plot.py  spectrogram.py  text_timeline.py  transcript.py
scripts/: AUDIO_RESET_GUIDE.md  README.md  diagnose_radar.py  generate_voice_messages.py  radar_dashboard.py  reset_audio_config.sh  setup_sudoers.sh  test_radar.py  update_radio_cache.py
(+64 files in other folders)
